@@ -207,7 +207,7 @@ public class WorkflowGlobalListener implements GlobalListener {
             }
             if (!BusinessStatusEnum.initialState(instance.getFlowStatus())) {
                 if (task != null && CollUtil.isNotEmpty(nextTasks) && nextTasks.size() == 1
-                    && flwCommonService.applyNodeCode(definition.getId()).equals(nextTasks.get(0).getNodeCode())) {
+                    && flwCommonService.applyNodeCode(definition.getId()).equals(nextTasks.getFirst().getNodeCode())) {
                     // 如果为画线指定驳回 线条指定为驳回 驳回得节点为申请人节点 则修改流程状态为退回
                     flowProcessEventHandler.processHandler(definition.getFlowCode(), instance, BusinessStatusEnum.BACK.getStatus(), params, false);
                     notifyInitiatorIfNeeded(definition, instance, BusinessStatusEnum.BACK.getStatus(), variable);
@@ -274,7 +274,7 @@ public class WorkflowGlobalListener implements GlobalListener {
         }
         // 只有“退回到申请人”场景需要拦截待办提醒，其余退回/流转仍然保留待办消息。
         String applyNodeCode = flwCommonService.applyNodeCode(definition.getId());
-        return !StringUtils.equals(applyNodeCode, nextTasks.get(0).getNodeCode());
+        return !StringUtils.equals(applyNodeCode, nextTasks.getFirst().getNodeCode());
     }
 
     /**
